[project]
name = "final-project"
version = "0.1.0"
description = "FHIR AI Query Builder"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "nest-asyncio>=1.6.0",
    "pip>=25.3",
    "pydantic-ai>=1.25.1",
    "python-dotenv>=1.2.1",
    "requests>=2.31.0",
    "textual>=0.47.0",
    "textual-dev>=1.8.0",
    "textual-serve>=1.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
fhir-query-builder = "src.fhir_tui:main"
fhir-cli = "src.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
